<resources>
    <string name="hero_ana">Ana</string>
    <string name="hero_bastion">Bastion</string>
    <string name="hero_doomfist">Doomfist</string>
    <string name="hero_dva">D.va</string>
    <string name="hero_genji">Genji</string>
    <string name="hero_hanzo">Hanzo</string>
    <string name="hero_junkrat">Junkrat</string>
    <string name="hero_lucio">Lucio</string>
    <string name="hero_mccree">McCree</string>
    <string name="hero_mei">Mei</string>
    <string name="hero_mercy">Mercy</string>
    <string name="hero_moira">Moira</string>
    <string name="hero_orisa">Orisa</string>
    <string name="hero_pharah">Pharah</string>
    <string name="hero_reaper">Reaper</string>
    <string name="hero_reinhardt">Reinhardt</string>
    <string name="hero_roadhog">Roadhog</string>
    <string name="hero_soldier76">Soldier: 76</string>
    <string name="hero_sombra">Sombra</string>
    <string name="hero_symmetra">Symmetra</string>
    <string name="hero_torbjorn">Torbjorn</string>
    <string name="hero_tracer">Tracer</string>
    <string name="hero_widowmaker">Widowmaker</string>
    <string name="hero_winston">Winston</string>
    <string name="hero_zarya">Zarya</string>
    <string name="hero_zenyatta">Zenyatta</string>
    <string name="app_name">SR Tracker</string>
    <string name="no_games_found">No matches found</string>
    <string name="choose_hero">Select a hero</string>
    <string name="map_name">map name</string>
    <string name="sr_after_game">Your SR after the match</string>
    <string name="sr" translatable="false">SR</string>
    <string name="save_game">Save match</string>
    <string name="create_game">Report a match</string>
    <string name="delete_all_games">Delete all matches</string>
    <string name="are_you_sure_to_delete_games">Are you sure you want to delete all your match records?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="multiple_heroes">Multiple Heroes</string>
    <string name="match_sr" translatable="false">%1$d SR</string>
    <string name="match_sr_difference" translatable="false">%1$d SR (%2$d SR)</string>
    <string name="no_hero_selected">No hero selected</string>
    <string name="please_select_a_hero">Please select a hero</string>
    <string name="please_enter_a_map_name">Please enter a map name</string>
    <string name="your_sr_cant_be_below_zero">Your SR can\'t be below 0! (you are not that bad, right?)</string>
    <string name="your_sr_cant_be_above_five_thounsand">You SR can\'t be above 5000 (unless you are Ryujehong or play for London Spitfire)</string>
    <string name="map_anubis">Temple of Anubis</string>
    <string name="map_blizzard">Blizzardworld</string>
    <string name="map_dorado">Dorado</string>
    <string name="map_eichenwalde">Eichenwalde</string>
    <string name="map_gibraltar">Watchpoint: Gibraltar</string>
    <string name="map_hanamura">Hanamura</string>
    <string name="map_hollywood">Hollywood</string>
    <string name="map_horizon">Horizon Lunar Colony</string>
    <string name="map_illios">Illios</string>
    <string name="map_junkertown">Junkertown</string>
    <string name="map_kingsrow">Kings Row</string>
    <string name="map_lijiang">Lijiang Tower</string>
    <string name="map_nepal">Nepal</string>
    <string name="map_numbani">Numbani</string>
    <string name="map_oasis">Oasis</string>
    <string name="map_route66">Route 66</string>
    <string name="map_volskaya">Volskaya Industries</string>
    <string name="no_map_selected">No map selected</string>
    <string name="choose_map">Choose a map</string>
</resources>
